--- a/index.html
+++ b/index.html
@@ -16,14 +16,61 @@
 </head>
 <body>
 <main class="main">
-
+    <section id="first-section">
+        <h1>Amazing Prices</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna
+            aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+            ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+    </section>
+    <section id="card-section">
+        <div class="card">
+            <div class="card-header">
+                <h4>Free</h4>
+            </div>
+            <div class="card-body">
+                <h3>$0/mo</h3>
+                <p>10 users included</p>
+                <p>2 GB of storage</p>
+                <p>Email support</p>
+                <p>Help center access</p>
+                <button class="button">Sign up for free</button>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header">
+                <h4>Free</h4>
+            </div>
+            <div class="card-body">
+                <h3>$15/mo</h3>
+                <p>20 users included</p>
+                <p>5 GB of storage</p>
+                <p>Email support</p>
+                <p>Help center access</p>
+                <button class="button">Sign up for free</button>
+            </div>
+        </div>
+        <div class="card">
+            <div class="card-header">
+                <h4>Free</h4>
+            </div>
+            <div class="card-body">
+                <h3>$29/mo</h3>
+                <p>30 users included</p>
+                <p>10 GB of storage</p>
+                <p>Email support</p>
+                <p>Help center access</p>
+                <button class="button">Sign up for free</button>
+            </div>
+        </div>
+    </section>
 </main>
 <footer id="footer">
-    <a>Amazing Product</a>
-    <a>Features</a>
-    <a>Enterprise</a>
-    <a>Support</a>
-    <a>Pricing</a>
+    <a id="foot-brand">Amazing Product</a>
+    <a id="foot-features">Features</a>
+    <a id="foot-enterprise">Enterprise</a>
+    <a id="foot-support">Support</a>
+    <a id="foot-pricing">Pricing</a>
 </footer>
 </body>
 </html>
