--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <div class="card">
             <div class="card-header">
-                <h4>Free</h4>
+                <h4>Pro</h4>
             </div>
             <div class="card-body">
                 <h3>$15/mo</h3>
@@ -52,7 +52,7 @@
         </div>
         <div class="card">
             <div class="card-header">
-                <h4>Free</h4>
+                <h4>Enterprise</h4>
             </div>
             <div class="card-body">
                 <h3>$29/mo</h3>
@@ -63,6 +63,51 @@
                 <button class="button">Sign up for free</button>
             </div>
         </div>
+    </section>
+    <section>
+        <h2>Compare Plans</h2>
+        <table>
+            <thead>
+            <tr>
+                <th></th>
+                <th>Free</th>
+                <th>Pro</th>
+                <th>Enterprise</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <th>Public</th>
+                <td>X</td>
+                <td>X</td>
+                <td>X</td>
+            </tr>
+            <tr>
+                <th>Private</th>
+                <td></td>
+                <td>X</td>
+                <td>X</td>
+            </tr>
+            <tr>
+                <th>Permissions</th>
+                <td>X</td>
+                <td>X</td>
+                <td>X</td>
+            </tr>
+            <tr>
+                <th>Sharing</th>
+                <td></td>
+                <td>X</td>
+                <td>X</td>
+            </tr>
+            <tr>
+                <th>Unlimited Members</th>
+                <td></td>
+                <td></td>
+                <td>X</td>
+            </tr>
+            </tbody>
+        </table>
     </section>
 </main>
 <footer id="footer">
